--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -4,6 +4,7 @@
 \begin{problem}
 
 \begin{condition}
+	Найти спектральное разложение корреляционной функции стационарного случайного прочесса
 
 
 \end{condition}
