--- a/exam_problems/ep-2.tex
+++ b/exam_problems/ep-2.tex
@@ -1,4 +1,4 @@
-\section*{Цепи Маркова}
+\section{Цепи Маркова}
 
 
 
@@ -10,8 +10,8 @@
 	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
 	$p_{13}=0$, $p_{12}=p_{23}=p_{33}=0.25$,
 	$p_{22}=0.625$, $p_{31}=0.5$
-	и начальное распределение вероятностей $\vec{p}(0)=(0;1;0)$.
-	Найти распределение вероятностей состояний после двух шагов.
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;1;0)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -21,8 +21,13 @@
 \begin{problem}
 
 \begin{condition}
+	(16.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{13}=p_{22}=p_{31}=0$,
+	$p_{12}=0.8$, $p_{21}=0.5$, $p_{32}=0.6$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;1;0)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -32,8 +37,13 @@
 \begin{problem}
 
 \begin{condition}
+	(15.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{11}=p_{22}=p_{33}=0$,
+	$p_{12}=p_{31}=0.75$, $p_{23}=0.5$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;0;1)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -43,8 +53,13 @@
 \begin{problem}
 
 \begin{condition}
+	(31.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{32}=p_{21}=p_{12}=0$,
+	$p_{22}=0.2$, $p_{11}=p_{33}=0.5$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(1;0;0)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -54,8 +69,13 @@
 \begin{problem}
 
 \begin{condition}
+	(11.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{11}=0.25$,$p_{12}=p_{33}=p_{21}=0$,
+	$p_{22}=0.4$, $p_{31}=0.5$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;1;0)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -65,8 +85,13 @@
 \begin{problem}
 
 \begin{condition}
+	(12.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{21}=0.75$,$p_{12}=p_{33}=p_{21}=0$,
+	$p_{33}=0.375$, $p_{21}=0.5$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;0;1)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
@@ -76,8 +101,13 @@
 \begin{problem}
 
 \begin{condition}
+	(33.1)
 
-
+	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
+	$p_{12}=p_{23}=p_{32}=0$,
+	$p_{21}=0.8$, $p_{11}=p_{33}=0.5$
+	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;0;1)$.
+	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
 \end{condition}
 
 \end{problem}
