--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -1,12 +1,14 @@
-
+\section{Динамическая система (наиболее вероятный тип задачи)}
 
 
 \begin{problem}
 
 \begin{condition}
-	Найти спектральное разложение корреляционной функции стационарного случайного прочесса
+	(Nun)
 
-
+	Найти спектральное разложение корреляционной функции стационарного
+	случайного процесса
+	$K_X(\tau)=2e^{-5|\tau|}$
 \end{condition}
 
 \end{problem}
@@ -16,8 +18,13 @@
 \begin{problem}
 
 \begin{condition}
+	(16.1)
 
-
+	Уравнение динамической системы:
+	$3\frac{dX(t)}{dt} - 6 X(t) = \frac{d^2 Y(t)}{d t^2}+\frac{d Y(t)}{dt} - 6 Y(t)$.
+	На вход поступает "белый шум" с интенсивностью
+	$G=3$.
+	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
 
 \end{problem}
@@ -27,8 +34,14 @@
 \begin{problem}
 
 \begin{condition}
+	(15.1)
 
-
+	Уравнение динамической системы:
+	$2\frac{dX(t)}{dt} + 6 X(t) = \frac{d Y(t)}{dt} + 5 Y(t)$.
+	На вход поступает стационарный процесс $X(t)$
+	с корреляционной функцией
+	$K_X(\tau)=5e^{-3|\tau|}$.
+	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
 
 \end{problem}
@@ -38,8 +51,11 @@
 \begin{problem}
 
 \begin{condition}
+	(31.1)
 
-
+	Спектральная плотность стационарного процесса
+	$S^*(\omega)=\frac{2}{\pi(\omega^2+25)}$.
+	Найти корреляционную функцию.
 \end{condition}
 
 \end{problem}
@@ -49,8 +65,13 @@
 \begin{problem}
 
 \begin{condition}
+	(11.1)
 
-
+	Работа динамической системы описывается уравнением
+	$3 X(t) = \frac{d Y(t)}{dt} + 5 Y(t)$.
+	На вход поступает "белый шум" с интенсивностью
+	$G=2$.
+	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
 
 \end{problem}
@@ -60,8 +81,11 @@
 \begin{problem}
 
 \begin{condition}
+	(12.1)
 
-
+	По спектральной плотности
+	$S^*_X(\omega)=\frac{\omega^2+5}{\pi(\omega^2+1)^2}$
+	стационарного случайного процесса $X(t)$ найти его дисперсию.
 \end{condition}
 
 \end{problem}
@@ -71,8 +95,10 @@
 \begin{problem}
 
 \begin{condition}
+	(33.1)
 
-
+	Дана спектральная плотность стационарного процесса
+	$S^*(\omega)=\frac{3}{\pi(9+\omega^2)}$
 \end{condition}
 
 \end{problem}
