--- a/exam_problems/ep-1.tex
+++ b/exam_problems/ep-1.tex
@@ -6,10 +6,62 @@
 	(Nun)
 
 	Даны интенсивности марковского процесса с тремя состояниями:
-	$\lambda_{12}=\lambda_{21}=\lambda{32}=0$,
+	$\lambda_{12}=\lambda_{21}=\lambda_{32}=0$,
 	$\lambda_{13}=1$, $\lambda_{23}=2$, $\lambda_{31}=3$.
 	Найти стационарное распределение вероятностей.
 \end{condition}
+
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-1 & 0  & 1  \\
+			0  & -2 & 2  \\
+			3  & 0  & -3
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-1 r_1 + 3 r_3        & = 0,  \\
+				-2 r_2                & =  0, \\
+				1 r_1 + 2 r_2 - 3 r_3 & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = 3r_3,          \\
+				r_2 & = 0              \\
+				r_3 & = \frac{r_1}{3}.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_1(1+0+\frac{1}{3})=1
+		, \quad
+		r_1=\frac{3}{4}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{3}{4}, 0, \frac{1}{4}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{3}{4}, 0, \frac{1}{4}\right)
+	$$
+\end{conclusion}
 
 \end{problem}
 
@@ -26,6 +78,58 @@
 	Найти стационарное распределение вероятностей.
 \end{condition}
 
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-3 & 2  & 1  \\
+			0  & -2 & 2  \\
+			2  & 0  & -2
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-3 r_1 + 2 r_3        & = 0,  \\
+				2 r_1 - 2 r_2         & =  0, \\
+				1 r_1 + 2 r_2 - 2 r_3 & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = \frac{2r_3}{3}, \\
+				r_2 & = r_1             \\
+				r_3 & = \frac{3r_1}{2}.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_1(1+1+\frac{3}{2})=1
+		, \quad
+		r_1=\frac{2}{7}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{2}{7}, \frac{2}{7}, \frac{3}{7}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{2}{7}, \frac{2}{7}, \frac{3}{7}\right)
+	$$
+\end{conclusion}
+
 \end{problem}
 
 
@@ -40,6 +144,58 @@
 	$\lambda_{13}=\lambda_{21}=3$
 	Найти стационарное распределение вероятностей.
 \end{condition}
+
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-3 & 0  & 3  \\
+			3  & -5 & 2  \\
+			0  & 2  & -2
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-3 r_1 + 3 r_2        & = 0,  \\
+				-5 r_2 + 2 r_3        & =  0, \\
+				3 r_1 + 2 r_2 - 2 r_3 & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = r_2,            \\
+				r_2 & = \frac{2r_3}{5}  \\
+				r_3 & = \frac{5r_2}{2}.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_2(1+1+\frac{5}{2})=1
+		, \quad
+		r_2=\frac{2}{9}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{2}{9}, \frac{2}{9}, \frac{5}{9}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{2}{9}, \frac{2}{9}, \frac{5}{9}\right)
+	$$
+\end{conclusion}
 
 \end{problem}
 
@@ -57,6 +213,64 @@
 	Найти стационарное распределение вероятностей.
 \end{condition}
 
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-5 & 2  & 3  \\
+			2  & -5 & 3  \\
+			1  & 1  & -2
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rclcl}
+			\begin{aligned}
+				-5 r_1 + 2 r_2 + r_3  & = 0,  \\
+				2 r_1 - 5 r_2 + 1 r_3 & =  0, \\
+				3 r_1 + 3 r_2 - 2 r_3 & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = \frac{2r_2+r_3}{5},  \\
+				r_2 & = \frac{2r_1+r_3}{5}   \\
+				r_3 & = \frac{3r_1+3r_2}{2}.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = \frac{2r_2+r_3}{5}, \\
+				r_2 & = r_1                 \\
+				r_3 & = 3r_1.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_1(1+1+3)=1
+		, \quad
+		r_1=\frac{1}{5}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{1}{5}, \frac{1}{5}, \frac{3}{5}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{1}{5}, \frac{1}{5}, \frac{3}{5}\right)
+	$$
+\end{conclusion}
+
 \end{problem}
 
 
@@ -71,6 +285,58 @@
 	$\lambda_{13}=3$, $\lambda_{32}=2$
 	Найти стационарное распределение вероятностей.
 \end{condition}
+
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-3 & 0  & 3  \\
+			1  & -2 & 1  \\
+			0  & 2  & -2
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-3 r_1 + 1 r_2        & = 0,  \\
+				- 2 r_2 + 2 r_3       & =  0, \\
+				3 r_1 + 1 r_2 - 2 r_3 & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = \frac{r_2}{3}, \\
+				r_2 & = r_3            \\
+				r_3 & = 3r_1.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_1(1+3+3)=1
+		, \quad
+		r_1=\frac{1}{7}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{1}{7}, \frac{3}{7}, \frac{3}{7}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{1}{7}, \frac{3}{7}, \frac{3}{7}\right)
+	$$
+\end{conclusion}
 
 \end{problem}
 
@@ -87,6 +353,58 @@
 	Найти стационарное распределение вероятностей.
 \end{condition}
 
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-8 & 0  & 8  \\
+			1  & -3 & 2  \\
+			5  & 3  & -8
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-8 r_1 + 1 r_2 + 5 r_3 & = 0,  \\
+				- 3 r_2 + 3 r_3        & =  0, \\
+				8 r_1 + 2 r_2 - 8 r_3  & = 0.
+			\end{aligned}
+			 & \qquad \Rightarrow \qquad &
+			\begin{aligned}
+				r_1 & = \frac{r_2+5r_3}{8}, \\
+				r_2 & = r_3                 \\
+				r_3 & = \frac{8r_1}{6}.
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_1(1+\frac{8}{6}+\frac{8}{6})=1
+		, \quad
+		r_1=\frac{6}{22}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{6}{22}, \frac{8}{22}, \frac{8}{22}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{6}{22}, \frac{8}{22}, \frac{8}{22}\right)
+	$$
+\end{conclusion}
+
 \end{problem}
 
 
@@ -98,8 +416,80 @@
 
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{12}=\lambda_{31}=1$, $\lambda_{13}=5$,
-	$\lambda_{23}=3$, $\lambda_{21}=\lambda_{32}=2$./
+	$\lambda_{23}=3$, $\lambda_{21}=\lambda_{32}=2$.
 	Найти стационарное распределение вероятностей.
 \end{condition}
+
+\begin{solution}
+
+	$$
+		\Lambda =
+		\begin{pmatrix}
+			-6 & 1  & 5  \\
+			2  & -5 & 3  \\
+			1  & 2  & -3
+		\end{pmatrix}
+	$$
+
+	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
+	задаётся условиями
+	$$
+		\overline r \Lambda = 0,
+		r_1 + r_2 + r_3 = 1.
+	$$
+
+	$$
+		\begin{array}{rcl}
+			\begin{aligned}
+				-6 r_1 + 2 r_2 + 1 r_3 & = 0,  \\
+				r_1 - 5 r_2 + 2 r_3    & =  0, \\
+				5 r_1 + 3 r_2 - 3 r_3  & = 0.
+			\end{aligned}
+			 & \Rightarrow &
+			\begin{aligned}
+				-30 r_2 + 12 r_3 + 2 r_2 + 1 r_3 & = 0,           \\
+				r_1                              & = 5r_2 - 2r_3, \\
+				5 r_1 + 3 r_2 - 3 r_3            & = 0.
+			\end{aligned}
+		\end{array}
+	$$
+
+
+	$$
+		\begin{array}{rclcl}
+			\begin{aligned}
+				r_2 & = \frac{13r_3}{28}, \\
+				r_1 & = 5r_2 - 2r_3.
+			\end{aligned}
+			 & \Rightarrow &
+			\begin{aligned}
+				r_2 & = \frac{13r_3}{28},       \\
+				r_1 & = \frac{65r_3}{28}- 2r_3.
+			\end{aligned}
+			 & \Rightarrow &
+			\begin{aligned}
+				r_2 & = r_3\frac{13}{28}, \\
+				r_1 & = r_3\frac{9}{28} .
+			\end{aligned}
+		\end{array}
+	$$
+
+	$$
+		r_3(\frac{9}{28}+\frac{13}{28}+1)=1
+		, \quad
+		r_3=\frac{28}{50}
+	$$
+
+	$$
+		\vec{r}=\left(\frac{9}{50}, \frac{13}{50}, \frac{28}{50}\right)
+	$$
+\end{solution}
+
+\begin{conclusion}
+
+	$$
+		\vec{r}=\left(\frac{9}{50}, \frac{13}{50}, \frac{28}{50}\right)
+	$$
+\end{conclusion}
 
 \end{problem}
