--- a/exam_problems.tex
+++ b/exam_problems.tex
@@ -89,6 +89,11 @@
 \setcounter{variant}{4}
 \setcounter{problem}{0}
 \input{exam_problems/ep-4.tex}
+\newpage
+
+\setcounter{variant}{5}
+\setcounter{problem}{0}
+\input{exam_problems/ep-5.tex}
 
 \end{document}
 
