--- a/exam_problems/ep-3.tex
+++ b/exam_problems/ep-3.tex
@@ -25,7 +25,7 @@ $$
 
 \begin{solution}
 
-	$K_X(t,s)=e^{2i(t-s)}=e^{2it-2is}$, $Y_t = \int_{0}^{t} i \tau X_\tau d\tau$
+	$K_X(t,s)=e^{2i(t-s)}=e^{2it-2is}$, $Y_t = \int_{0}^{t} i X_\tau d\tau$
 
 	$$
 		L_t[\cdot] = \int_{0}^{t} i [\cdot] d\tau
