--- a/exam_problems/ep-5.tex
+++ b/exam_problems/ep-5.tex
@@ -59,7 +59,31 @@ $\bar{t}_{\text{СМО}}$-  среднее время в системе.
 	\end{tabular}
 \end{table}
 
-
+\begin{table}[h]
+	\centering
+	\begin{tabular}{c|c|c|c}
+		                       & $(M|M|1|0)$ & $(M|M|1|\infty)$, $\nu<1$ & $(M|M|1|m)$ \\
+		\hline
+		$r_0$                  &             &                           &             \\
+		\hline
+		$P_{\text{отк}}$       &             &                           &             \\
+		\hline
+		$Q$                    &             &                           &             \\
+		\hline
+		$A$                    &             &                           &             \\
+		\hline
+		$\bar{k}$              &             &                           &             \\
+		\hline
+		$\bar{r}$              &             &                           &             \\
+		\hline
+		$\bar{z}$              &             &                           &             \\
+		\hline
+		$\bar{t}_{\text{оч}}$  &             &                           &             \\
+		\hline
+		$\bar{t}_{\text{СМО}}$ &             &                           &             \\
+		\hline
+	\end{tabular}
+\end{table}
 
 
 \subsection*{Задачи}
