--- a/exam_problems/ep-3.tex
+++ b/exam_problems/ep-3.tex
@@ -56,13 +56,13 @@ $$
 		\begin{aligned}
 			\overline{L}_s[L_t[K_X(\tau,\sigma)]] & =
 			\int_{0}^{s} -i \, L_t[K_X(\tau,\sigma)] \, d\sigma
-			= \int_{0}^{s} -i \, i e^{-2i\sigma} \frac{1}{2} (e^{2it}-1) \, d\sigma
-			\\ & = \frac{1}{2} (e^{2it}-1) \int_{0}^{s} e^{-2i\sigma}  \, d\sigma
-			= \frac{1}{2} (e^{2it}-1)
+			= \int_{0}^{s} -i e^{-2i\sigma} \frac{1}{2} (e^{2it}-1) \, d\sigma
+			\\ & = \frac{-i}{2} (e^{2it}-1) \int_{0}^{s} e^{-2i\sigma}  \, d\sigma
+			= \frac{-i}{2} (e^{2it}-1)
 			\left[
 				\frac{1}{-2i} e^{-2i\sigma}
 				\right]_0^s
-			\\ & = \frac{1}{2} (e^{2it}-1) \frac{1}{-2i} (e^{-2is} -1)
+			\\ & = \frac{-i}{2} (e^{2it}-1) \frac{1}{-2i} (e^{-2is} -1)
 			= \frac{1}{4} (e^{2it}-1) (e^{-2is} -1)
 			\\ & = \frac{1}{4} (e^{2it-2is}-e^{2it}-e^{-2is}+1)
 		\end{aligned}
