--- a/exam_problems/ep-5.tex
+++ b/exam_problems/ep-5.tex
@@ -62,25 +62,25 @@ $\bar{t}_{\text{СМО}}$-  среднее время в системе.
 \begin{table}[h]
 	\centering
 	\begin{tabular}{c|c|c|c}
-		                       & $(M|M|1|0)$ & $(M|M|1|\infty)$, $\nu<1$ & $(M|M|1|m)$ \\
+		                       & $(M|M|1|0)$                                                             & $(M|M|1|\infty)$, $\nu<1$                          & $(M|M|1|m)$                                                                           \\
 		\hline
-		$r_0$                  &             &                           &             \\
+		$r_0$                  & $(1+\rho)^{-1}$                                                         & $1-\rho$                                           & $\frac{1-\rho}{1-\rho^{m+2}}$                                                         \\
 		\hline
-		$P_{\text{отк}}$       &             &                           &             \\
+		$P_{\text{отк}}$       & $\rho r_0= \frac{\rho}{1+\rho}$                                         & $0$                                                & $\rho_{m+1}=\rho^{m+1}r_0=\frac{(1-\rho)\rho^{m+1}}{1-\rho^{m+2}}$                    \\
 		\hline
-		$Q$                    &             &                           &             \\
+		$Q$                    & $P_{\text{обсл}}=1-P_{\text{отк}}=\frac{1}{1+\rho}$                     & $P_{\text{обсл}}=1-P_{\text{отк}}=1$               & $P_{\text{обсл}}=1-P_{\text{отк}}$                                                    \\
 		\hline
-		$A$                    &             &                           &             \\
+		$A$                    & $\lambda Q = \frac{\lambda}{1+\rho}$                                    & $\lambda Q=\lambda$                                & $\lambda Q $                                                                          \\
 		\hline
-		$\bar{k}$              &             &                           &             \\
+		$\bar{k}$              & $\rho Q = \frac{\rho}{1+\rho}$                                          & $\rho Q=\rho$                                      & $\rho Q$                                                                              \\
 		\hline
-		$\bar{r}$              &             &                           &             \\
+		$\bar{r}$              & $0$                                                                     & $\frac{\rho^2}{1-\rho}$                            & $r_0 \sum_{j=1}^{m} j \rho^j = r_0\frac{\rho(1-(m+1)\rho^m+m\rho^{m+1})}{(1-\rho)^2}$ \\
 		\hline
-		$\bar{z}$              &             &                           &             \\
+		$\bar{z}$              & $\bar{k}$                                                               & $\frac{\rho}{1-\rho}$                              & $\bar{k}+\bar{r}$                                                                     \\
 		\hline
-		$\bar{t}_{\text{оч}}$  &             &                           &             \\
+		$\bar{t}_{\text{оч}}$  & $\frac{\bar{r}}{\lambda}=0$                                             & $\frac{\bar{r}}{\lambda}=\frac{\rho}{\mu(1-\rho)}$ & $\frac{\bar{r}}{\lambda}$                                                             \\
 		\hline
-		$\bar{t}_{\text{СМО}}$ &             &                           &             \\
+		$\bar{t}_{\text{СМО}}$ & $\frac{\bar{z}}{\lambda}=\frac{\bar{k}}{\lambda}=\frac{1}{\mu(1+\rho)}$ & $\frac{\bar{z}}{\lambda}=\frac{1}{\mu(1-\rho)}$    & $\frac{\bar{z}}{\lambda}$                                                             \\
 		\hline
 	\end{tabular}
 \end{table}
