--- a/exam_questions/eq-1.tex
+++ b/exam_questions/eq-1.tex
@@ -3,3 +3,70 @@
 \begin{condition}
 	Траектории, сечения, конечномерные распределения случайных процессов. Классификация случайных процессов. Определение и свойства марковского процесса.
 \end{condition}
+
+\Definition{Случайный процесс}{
+	семейство случайных велечин $\{X_t=X(t), t\in T\}$,
+	принимающих значения в измеримом пространстве $(S,B)$,
+	и определённых на одном вероятностном пространстве $(\Omega, A, P)$.
+}
+
+\Definition{Траектория случайного процесса}{
+	отображение $t \to X_t(\omega)$,
+	при фиксированном $\omega\in\Omega$.
+}
+
+\Definition{Сечение случайного процесса}{
+	вектор $(X(t_1),X(t_2),...,X(t_n))$,
+	для любого набора $t_1,t_2,...,t_n\in T$.
+}
+
+\Definition{Конечномерное распределение случайного процесса}{
+	функция
+	$F_{t_1,t_2,...,t_n}(x_1,x_2,...,x_n)=P(X(t_1)\leq x_1,...,X(t_n) \leq x_n)$.
+
+	Где $n \in \mathbb{N}$,
+	$t_1,t_2,...,t_n\in T$,
+	$X(t)=(X(t_1),...X(t_n))$ - конечномерное сечение.
+}
+
+\textbf{Классификация случайных процессов}:
+\begin{table}[ht]
+	\centering
+	\begin{tabularx}{\textwidth}{|c|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|}
+		\hline
+		\diagbox{$T$}{$S$}                                                            &
+		Дискретное                                                                    &
+		Непрерывное                                                                     \\
+		\hline
+		Дискретное                                                                    &
+		Последовательность дискретных случайных величин                               &
+		Последовательность непрерывных случайных величин                                \\
+		\hline
+		Непрерывное                                                                   &
+		Случайный процесс с непрерывным временем и дискретным пространством состояний &
+		Случайный процесс с непрерывным временем и непрерывным пространством состояний  \\
+		\hline
+	\end{tabularx}
+\end{table}
+
+
+\Definition{Марковский случайный процесс}{
+	случайный процесс, для которого выполнено равенство условных вероятностей
+
+	$
+		P\left(X(t_n)\in B_n| X(t_1)\in B_1, ..., X(t_{n-1})\in B_{n-1}\right)
+		=P(X(t_n)\in B_n | X(t_{n-1})\in B_{n-1})
+	$,
+
+	$\forall t_1<t_2<...<t_n\in T$, $B_i\in B$, $i=1,...,n$.
+}
+
+\Property{Однородность марковского случайного процесса}{
+	Марковский процесс однороден,
+	если переходные вероятности зависят только от разности времён:
+	$P()$
+}
+
+\Property{Эргодичность марковского случайного процесса}{
+
+}
